# DAT

./: .gitmodules  DDP_IMPLEMENTATION.md  README.md  eval_acc.py  eval_acc_imagenet.sh  eval_fid.py  eval_ood_detection.py  eval_utils.py  evaluate_imagenet_robustbench.py  lint.sh  packages.yaml  pyproject.toml  run_acc_eval.py  run_fid_eval.py  run_ood_eval.py  setup_data_rclone.sh  train.py  train_ddp.py
.github/workflows/: lint.yml
InNOutRobustness/utils/: load_trained_model.py
data/OpenImage-O-large/: README.md  create_ood_dataset.py  make_openimages_50K_val_fideval.py  minimal_openimages_downloader.py  val_file_ids.txt
experiments/cifar10/: cifar10_conditional_r1reg0_augauto_innoutloader_steps40_bs128_indistxent_sgd_lr0.001_stesp50_wd_wrn3410_indistaugoriginal_innoutpretrained_mean0_bestavg_ema_logsumexp_run2.yaml  cifar10_conditional_r1reg0_augauto_innoutloader_steps40_bs128_indistxent_sgd_lr0.001_stesp50_wd_wrn3410_indistaugoriginal_innoutpretrained_mean0_bestavg_ema_logsumexp_seed1.yaml
experiments/imagenet/: imagenet_indistonly_joint_convnext_300K.yaml  (+11 more)
model_configs/: cifar10-at-WideResNet34x10.yaml  cifar10-dat-WideResNet34x10-T40-seed0.yaml  cifar10-dat-WideResNet34x10-T40-seed0_regress.yaml  cifar10-dat-WideResNet34x10-T40-seed1.yaml  cifar10-dat-WideResNet34x10-T40-seed2.yaml  cifar10-dat-WideResNet34x10-T50.yaml  cifar10-dual-at-WideResNet34x10-T40-seed0.yaml  cifar10-dual-at-WideResNet34x10-T40-seed1.yaml  cifar10-dual-at-WideResNet34x10-T40-seed2.yaml  cifar10-dual-at-WideResNet34x10-T50.yaml  cifar10-ratio-WideResNet34x10.yaml  cifar100-at-WideResNet34x10.yaml  cifar100-dat-WideResNet34x10-T45-seed0.yaml  cifar100-dat-WideResNet34x10-T45-seed1.yaml  cifar100-dat-WideResNet34x10-T45-seed2.yaml  cifar100-dat-WideResNet34x10-T50.yaml  cifar100-dual-at-WideResNet34x10-T45-seed0.yaml  cifar100-dual-at-WideResNet34x10-T45-seed1.yaml  cifar100-dual-at-WideResNet34x10-T45-seed2.yaml  cifar100-dual-at-WideResNet34x10-T50.yaml  cifar100-ratio-WideResNet34x10.yaml  imagenet-at-ConvNeXtLarge-convst-256x256.yaml  imagenet-at-ConvNeXtLarge-convst.yaml  imagenet-at-ResNet50ImageNet-256x256.yaml  imagenet-at-ResNet50ImageNet.yaml  imagenet-at-WideResNet50x4ImageNet-256x256.yaml  imagenet-at-WideResNet50x4ImageNet.yaml  imagenet-dat-ConvNeXtBase-convst.yaml  imagenet-dat-ConvNeXtLarge-convst-256x256-stepsize3.yaml  imagenet-dat-ConvNeXtLarge-convst-256x256-stepsize4.yaml  imagenet-dat-ConvNeXtLarge-convst-256x256.yaml  imagenet-dat-ConvNeXtLarge-convst.yaml  imagenet-dat-ConvNeXtSmall-convst.yaml  imagenet-dat-ResNet50ImageNet-T15-100K.yaml  imagenet-dat-ResNet50ImageNet-T15-10K.yaml  imagenet-dat-ResNet50ImageNet-T15-1K-noaugm.yaml  imagenet-dat-ResNet50ImageNet-T15-1K.yaml  imagenet-dat-ResNet50ImageNet-T15-256x256.yaml  imagenet-dat-ResNet50ImageNet-T15-300K-seed0.yaml  imagenet-dat-ResNet50ImageNet-T15-300K-seed1.yaml  (+19 more)
rebm/: model_wrapper.py  utils.py
rebm/attacks/: __init__.py  adv_attacks.py
(+75 files in other folders)
