# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rebm"
description = "Robust EBMs"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["version"]

[tool.setuptools]
packages = ["rebm"]

[tool.ruff]
target-version = "py311"
extend-include = ["*.ipynb"]
exclude = ["experiments/archive/old-notebooks", 
    "rebm/training/archive",
    "rebm/utils.py",
    "vision",
    "InNOutRobustness/*", 
    "rebm/innout_datasets",
    # Code taken from external repos
    "GOOD/tiny_utils/tinyimages_80mn_loader.py",
    "rebm/models/preactresnet.py",
    "rebm/models/robustness_resnet_cifar10.py",
    "rebm/models/wide_resnet.py",
    "rebm/models/wide_resnet_innoutrobustness.py",
    "pytorch-fid",
    "robustbench",
    "InNOutRobustness",
    "R3GAN",
    "rebm/training/average_model.py",
]

# Line length 80 to makes it easier to have multiple files open side-by-side.
line-length = 80

[tool.ruff.lint]
# Check that imports are sorted
extend-select = ["I"]

# Ignore F722 for jaxtyping compatibility
ignore = ["F722", "E731"]

[tool.ruff.lint.isort]
# wandb is a package, but sometimes also a folder that gets created.
# We tell ruff to treat it always as a third-party package to make import
# sorting consistent.
known-third-party = ["wandb", "datasets"]
