# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rebm"
description = "Robust EBMs"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["version"]

[tool.setuptools]
packages = ["rebm"]

[tool.ruff]
target-version = "py311"
extend-include = ["*.ipynb"]
exclude = [
    # External repositories and generated data
    "InNOutRobustness",
    "InNOutRobustnessMean0_cifar100",
    "pytorch-fid",
    "pytorch-image-models",
    # Code taken from external repos
    "rebm/models/wide_resnet_innoutrobustness.py",
    "rebm/training/average_model.py",
    "rebm/training/utils_architecture.py",
    # Untracked utility scripts and models
    "checkpoints/",
    "copy_wandb_runs.py",
    "rebm/models/preactresnet.py",
    "rebm/models/resnet.py",
    "rebm/models/robustness_resnet_cifar10.py",
]

# Line length 80 to makes it easier to have multiple files open side-by-side.
line-length = 80

[tool.ruff.lint]
# Check that imports are sorted
extend-select = ["I"]

# Ignore F722 for jaxtyping compatibility
ignore = ["F722", "E731"]

[tool.ruff.lint.isort]
# wandb is a package, but sometimes also a folder that gets created.
# We tell ruff to treat it always as a third-party package to make import
# sorting consistent.
known-third-party = ["wandb", "datasets"]
